// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-1d2vwm0 {
  height: 1em;
  width: 1em;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-546l7a {
  visibility: hidden;
  position: absolute;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1y86pwr e7ah3bn0"
    type="button"
  >
    <div
      class="cache-i7e9al em6gco82"
    >
      <div
        aria-hidden="true"
      >
        <svg
          class="CircularProgressbar  cache-1d2vwm0 e7dhm9i1"
          data-test-id="CircularProgressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="CircularProgressbar-trail"
            d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
            fill-opacity="0"
            stroke-width="16"
            style="stroke: transparent; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
          />
          <path
            class="CircularProgressbar-path"
            d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
            fill-opacity="0"
            stroke-width="16"
            style="stroke: currentColor; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
          />
        </svg>
      </div>
      <div
        class="cache-546l7a e7dhm9i0"
      >
        <label
          for="input-6c756c756c756c756c756c756c756c75"
        >
          Loading
        </label>
        <progress
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          id="input-6c756c756c756c756c756c756c756c75"
          max="100"
          value="20"
        >
          20%
        </progress>
      </div>
    </div>
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly loading with an icon 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-1d2vwm0 {
  height: 1em;
  width: 1em;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-546l7a {
  visibility: hidden;
  position: absolute;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-14frhxz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1y86pwr e7ah3bn0"
    type="button"
  >
    <div
      class="cache-i7e9al em6gco82"
    >
      <div
        aria-hidden="true"
      >
        <svg
          class="CircularProgressbar  cache-1d2vwm0 e7dhm9i1"
          data-test-id="CircularProgressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="CircularProgressbar-trail"
            d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
            fill-opacity="0"
            stroke-width="16"
            style="stroke: transparent; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
          />
          <path
            class="CircularProgressbar-path"
            d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
            fill-opacity="0"
            stroke-width="16"
            style="stroke: currentColor; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
          />
        </svg>
      </div>
      <div
        class="cache-546l7a e7dhm9i0"
      >
        <label
          for="input-6c756c756c756c756c756c756c756c75"
        >
          Loading
        </label>
        <progress
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          id="input-6c756c756c756c756c756c756c756c75"
          max="100"
          value="20"
        >
          20%
        </progress>
      </div>
    </div>
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-14frhxz em6gco82"
    >
      <div
        aria-hidden="true"
      >
        <svg
          class="CircularProgressbar  cache-1d2vwm0 e7dhm9i1"
          data-test-id="CircularProgressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="CircularProgressbar-trail"
            d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
            fill-opacity="0"
            stroke-width="16"
            style="stroke: transparent; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
          />
          <path
            class="CircularProgressbar-path"
            d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
            fill-opacity="0"
            stroke-width="16"
            style="stroke: currentColor; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
          />
        </svg>
      </div>
      <div
        class="cache-546l7a e7dhm9i0"
      >
        <label
          for="input-6c756c756c756c756c756c756c756c75"
        >
          Loading
        </label>
        <progress
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          id="input-6c756c756c756c756c756c756c756c75"
          max="100"
          value="20"
        >
          20%
        </progress>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link 1`] = `
<DocumentFragment>
  .cache-1awtwbm {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1awtwbm:hover,
.cache-1awtwbm:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1awtwbm:hover,
.cache-1awtwbm:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1awtwbm:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 e7ah3bn0 cache-1awtwbm e7ah3bn0"
    href="/"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link with disabled props 1`] = `
<DocumentFragment>
  .cache-18zitoy {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #fafafb;
  box-shadow: none;
}

.cache-18zitoy:hover,
.cache-18zitoy:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-18zitoy:hover,
.cache-18zitoy:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-18zitoy:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-18zitoy e7ah3bn0"
    disabled=""
    to="/"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as dom link 1`] = `
<DocumentFragment>
  .cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 cache-1y86pwr e7ah3bn0"
    href="/"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when disabled 1`] = `
<DocumentFragment>
  .cache-18zitoy {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #fafafb;
  box-shadow: none;
}

.cache-18zitoy:hover,
.cache-18zitoy:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-18zitoy:hover,
.cache-18zitoy:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-18zitoy:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-18zitoy e7ah3bn0"
    disabled=""
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable 1`] = `
<DocumentFragment>
  .cache-eskgz8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-eskgz8:hover,
.cache-eskgz8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-eskgz8:hover,
.cache-eskgz8:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-eskgz8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-eskgz8 .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-left: 0;
  overflow: hidden;
}

.cache-eskgz8:focus .em6gco81,
.cache-eskgz8:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-left: 8px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-eskgz8 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable with an icon 1`] = `
<DocumentFragment>
  .cache-gsj9ju {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-gsj9ju:hover,
.cache-gsj9ju:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-gsj9ju:hover,
.cache-gsj9ju:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-gsj9ju:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-gsj9ju .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-right: 0;
  overflow: hidden;
}

.cache-gsj9ju:focus .em6gco81,
.cache-gsj9ju:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-right: 8x;
}

.cache-1js4uj9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0px;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-gsj9ju e7ah3bn0"
    type="button"
  >
    <div
      class="cache-1js4uj9 em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a custom Icon 1`] = `
<DocumentFragment>
  .cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1y86pwr e7ah3bn0"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      IconMock
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a rounded action button 1`] = `
<DocumentFragment>
  .cache-8at8tw {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 16px;
}

.cache-8at8tw:hover,
.cache-8at8tw:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-8at8tw:hover,
.cache-8at8tw:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-8at8tw:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-8at8tw>svg {
  pointer-events: none;
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-8at8tw e7ah3bn0"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a tooltip 1`] = `
<DocumentFragment>
  .cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-describedby="test"
    tabindex="0"
  >
    <button
      aria-describedby="test"
      aria-disabled="false"
      class="em6gco80 cache-1y86pwr e7ah3bn0"
      type="button"
    >
      <div
        class="cache-i7e9al em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-115wth8 em6gco81"
      >
        Hello
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should render correctly with an action button 1`] = `
<DocumentFragment>
  .cache-l41h8w {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-l41h8w:hover,
.cache-l41h8w:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-l41h8w:hover,
.cache-l41h8w:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-l41h8w:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-l41h8w>svg {
  pointer-events: none;
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-l41h8w e7ah3bn0"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with an icon on the right 1`] = `
<DocumentFragment>
  .cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-14frhxz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1y86pwr e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-14frhxz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly without a children 1`] = `
<DocumentFragment>
  .cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1y86pwr e7ah3bn0"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should render correctly without a children and an icon 1`] = `
<DocumentFragment>
  .cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1y86pwr e7ah3bn0"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render large 1`] = `
<DocumentFragment>
  .cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1y86pwr e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render medium 1`] = `
<DocumentFragment>
  .cache-oxng0u {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 24px;
  padding: 8px 16px;
}

.cache-oxng0u:hover,
.cache-oxng0u:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-oxng0u:hover,
.cache-oxng0u:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-oxng0u:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-oxng0u e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render small 1`] = `
<DocumentFragment>
  .cache-1hbaa8m {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 16px;
  padding: 8px 16px;
}

.cache-1hbaa8m:hover,
.cache-1hbaa8m:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1hbaa8m:hover,
.cache-1hbaa8m:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1hbaa8m:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1hbaa8m e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xsmall 1`] = `
<DocumentFragment>
  .cache-7tg4ge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
}

.cache-7tg4ge:hover,
.cache-7tg4ge:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-7tg4ge:hover,
.cache-7tg4ge:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-7tg4ge:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-7tg4ge e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xxsmall 1`] = `
<DocumentFragment>
  .cache-1c2qwpl {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 12px;
}

.cache-1c2qwpl:hover,
.cache-1c2qwpl:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1c2qwpl:hover,
.cache-1c2qwpl:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1c2qwpl:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1c2qwpl e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info 1`] = `
<DocumentFragment>
  .cache-71g3x3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #e4edff;
  color: #3f6ed8;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-71g3x3:hover,
.cache-71g3x3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-71g3x3:hover,
.cache-71g3x3:focus {
  color: #3f6ed8;
  background-color: #cadcff;
}

.cache-71g3x3:focus {
  box-shadow: 0 0 0 2px rgba(228,237,255,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-71g3x3 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info-bordered 1`] = `
<DocumentFragment>
  .cache-xln50d {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #3f6ed8;
  background-color: #ffffff;
  color: #3f6ed8;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-xln50d:hover,
.cache-xln50d:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xln50d svg {
  fill: #3f6ed8;
  pointer-events: none;
}

.cache-xln50d:hover,
.cache-xln50d:focus {
  border: 1px solid #3f6ed8;
  color: #ffffff;
  background-color: #3f6ed8;
}

.cache-xln50d:hover svg,
.cache-xln50d:focus svg {
  fill: #ffffff;
}

.cache-xln50d:focus {
  box-shadow: 0 0 0 2px rgba(63,110,216,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-xln50d e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render link 1`] = `
<DocumentFragment>
  .cache-1b6s5zy {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #ffffff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1b6s5zy:hover,
.cache-1b6s5zy:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1b6s5zy:hover,
.cache-1b6s5zy:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1b6s5zy e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary 1`] = `
<DocumentFragment>
  .cache-1y86pwr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y86pwr:hover,
.cache-1y86pwr:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1y86pwr:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1y86pwr e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-bordered 1`] = `
<DocumentFragment>
  .cache-rghjls {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-rghjls:hover,
.cache-rghjls:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-rghjls svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-rghjls:hover,
.cache-rghjls:focus {
  border: 1px solid #4f0599;
  color: #ffffff;
  background-color: #4f0599;
}

.cache-rghjls:hover svg,
.cache-rghjls:focus svg {
  fill: #ffffff;
}

.cache-rghjls:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-rghjls e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-soft-bordered 1`] = `
<DocumentFragment>
  .cache-6awk2g {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #d4dae7;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-6awk2g:hover,
.cache-6awk2g:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-6awk2g svg {
  fill: #d4dae7;
  pointer-events: none;
}

.cache-6awk2g:hover,
.cache-6awk2g:focus {
  border: 1px solid #4f0599;
  color: #ffffff;
  background-color: #4f0599;
}

.cache-6awk2g:hover svg,
.cache-6awk2g:focus svg {
  fill: #ffffff;
}

.cache-6awk2g:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-6awk2g e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary 1`] = `
<DocumentFragment>
  .cache-1cfcchx {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1cfcchx:hover,
.cache-1cfcchx:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1cfcchx:hover,
.cache-1cfcchx:focus {
  color: #4a4f62;
  background-color: #e9e7ec;
}

.cache-1cfcchx:focus {
  box-shadow: 0 0 0 2px rgba(246,245,247,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1cfcchx e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary-bordered 1`] = `
<DocumentFragment>
  .cache-6awk2g {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #d4dae7;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-6awk2g:hover,
.cache-6awk2g:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-6awk2g svg {
  fill: #d4dae7;
  pointer-events: none;
}

.cache-6awk2g:hover,
.cache-6awk2g:focus {
  border: 1px solid #4f0599;
  color: #ffffff;
  background-color: #4f0599;
}

.cache-6awk2g:hover svg,
.cache-6awk2g:focus svg {
  fill: #ffffff;
}

.cache-6awk2g:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-6awk2g e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success 1`] = `
<DocumentFragment>
  .cache-bo5895 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #45d6b5;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-bo5895:hover,
.cache-bo5895:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bo5895:hover,
.cache-bo5895:focus {
  color: #ffffff;
  background-color: #30d1ad;
}

.cache-bo5895:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-bo5895 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-bordered 1`] = `
<DocumentFragment>
  .cache-1fbbc5i {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #45d6b5;
  background-color: #ffffff;
  color: #45d6b5;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1fbbc5i:hover,
.cache-1fbbc5i:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbbc5i svg {
  fill: #45d6b5;
  pointer-events: none;
}

.cache-1fbbc5i:hover,
.cache-1fbbc5i:focus {
  border: 1px solid #45d6b5;
  color: #ffffff;
  background-color: #45d6b5;
}

.cache-1fbbc5i:hover svg,
.cache-1fbbc5i:focus svg {
  fill: #ffffff;
}

.cache-1fbbc5i:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1fbbc5i e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-soft-bordered 1`] = `
<DocumentFragment>
  .cache-42knjr {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #d4dae7;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-42knjr:hover,
.cache-42knjr:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-42knjr svg {
  fill: #d4dae7;
  pointer-events: none;
}

.cache-42knjr:hover,
.cache-42knjr:focus {
  border: 1px solid #45d6b5;
  color: #ffffff;
  background-color: #45d6b5;
}

.cache-42knjr:hover svg,
.cache-42knjr:focus svg {
  fill: #ffffff;
}

.cache-42knjr:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-42knjr e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render transparent 1`] = `
<DocumentFragment>
  .cache-1r21p8j {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1r21p8j:hover,
.cache-1r21p8j:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1r21p8j e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning 1`] = `
<DocumentFragment>
  .cache-zlwqh9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #ef5774;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zlwqh9:hover,
.cache-zlwqh9:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zlwqh9:hover,
.cache-zlwqh9:focus {
  color: #ffffff;
  background-color: #ed4061;
}

.cache-zlwqh9:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zlwqh9 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-bordered 1`] = `
<DocumentFragment>
  .cache-ysbmy7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #ef5774;
  background-color: #ffffff;
  color: #ef5774;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-ysbmy7:hover,
.cache-ysbmy7:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ysbmy7 svg {
  fill: #ef5774;
  pointer-events: none;
}

.cache-ysbmy7:hover,
.cache-ysbmy7:focus {
  border: 1px solid #ef5774;
  color: #ffffff;
  background-color: #ef5774;
}

.cache-ysbmy7:hover svg,
.cache-ysbmy7:focus svg {
  fill: #ffffff;
}

.cache-ysbmy7:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-ysbmy7 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-soft-bordered 1`] = `
<DocumentFragment>
  .cache-1pahjoq {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #d4dae7;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1pahjoq:hover,
.cache-1pahjoq:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1pahjoq svg {
  fill: #d4dae7;
  pointer-events: none;
}

.cache-1pahjoq:hover,
.cache-1pahjoq:focus {
  border: 1px solid #ef5774;
  color: #ffffff;
  background-color: #ef5774;
}

.cache-1pahjoq:hover svg,
.cache-1pahjoq:focus svg {
  fill: #ffffff;
}

.cache-1pahjoq:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1pahjoq e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;
